# Cimg

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  a.out  a.ppm  curve.hpp  forms.hpp  functions.hpp  kernel.c  line.hpp  main.cpp  maingpu.cpp  vector.hpp
headers/: curve.hpp  forms.hpp  funcs.tpp  functions.hpp  line.hpp  vector.hpp
